# scancode-rs

./: Cargo.toml
examples/: event.rs
src/: lib.rs  scancode_linux.rs  scancode_macos.rs  scancode_windows.rs
tests/: lib.rs
