[package]
name = "scancode"
version = "0.1.2"
authors = [
    "Risto Saarelma <risto.saarelma@iki.fi>",
    "George Burton <burtonageo@gmail.com",
]
description = "Keyboard hardware scancode converter"
keywords = ["keyboard", "input"]
repository = "https://github.com/burtonageo/scancode-rs"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies.enum-primitive-derive]
version = "0.2"
optional = true

[dependencies.num-traits]
version = "0.2"
default-features = false
optional = true

[dev-dependencies]
glutin = "0.27"
num-traits = "0.2"

[features]
default = ["std", "num-from-primitive"]
num-from-primitive = ["num-traits", "enum-primitive-derive"]
std = []
